fixed vertical align on squares

--- a/style.css
+++ b/style.css
@@ -1,45 +1,45 @@
 * {
   box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
-  /*background-color: #FEC1BE;*/
   background-color: #f2f1f1;
   color: #1F2593;
+  font-family: 'Quicksand', sans-serif;
 }
 
 body {
-  margin: 40px 50px;
+  margin: 20px 50px;
 }
 
 button {
+  margin: 40px 0;
   padding: 10px 20px;
+  background-color: #1F2593;
+  border: none;
+  color: #fff;
+  cursor: pointer;
   font-size: 1em;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  background-color: #1F2593;
-  color: #fff;
-  cursor: pointer;
-  border: none;
 }
 
 .grid {
   clear: both;
-  margin: 200px auto;
+  margin: 0 auto;
 }
 
 .row {
-  text-align: center;
   height: 150px;
   font-size: 0;   /* removes gap */
+  text-align: center;
 }
 
 /*make responsive*/
 .square {
   display: inline-block;
-  font-size: 100px;
   width: 150px;
   height: 150px;
+  vertical-align: top;
   line-height: 1.5;
-  /*border: 1px solid deepPink;*/
+  font-size: 100px;
 }
 
 .col-1 {
@@ -63,6 +63,7 @@ button {
 }
 
 .scores {
+  overflow: hidden;
   display: block;
 }
 
@@ -77,8 +78,8 @@ button {
 }
 
 .message {
+  margin: 50px 0;
   text-align: center;
-  margin: 0 0 2em;
 }
 
 .square:hover {
